# genicam_simulator

./: .gitignore  README.md  pyproject.toml
genicam_simulator/: broadcast.py  camera_register.py  commands.py  config_parser.py  server.py
genicam_simulator/data/: camera_config.yaml
genicam_simulator/tests/: test_simulator.py
